调整Class反射实例的方式为先尝试Declared方法，失败再尝试普通方法